--- a/index.html
+++ b/index.html
@@ -9,22 +9,47 @@
     <title>Weather Dashboard</title>
 </head>
 <body>
-    <header class="jumbotron">
+    <header class="d-flex justify-content-center jumbotron">
         <h1>Weather Dashboard</h1>
     </header>
     <main class="container">
 
         <div class="row">
 
-            <section class="col-4 d-flex justify-content-center flex-wrap">
-                <h2>Search for a City:</h2>
-                <input type="text" placeholder="City Name"/>
-                <button type="button" class="btn btn-primary">Search</button>
+            <section class="col-4 d-flex flex-wrap">
+                <div class="container">
+                    <div class="d-flex justify-content-center row">
+                        <h2 class="m-3 mb-4 form-label">Search for a City:</h2>
+                        <form id="city-form" class="mb-3 border-top">
+                            <label class="form-label">City</label>
+                            <input type="text" placeholder="City Name" id="city-name" class="form-control mb-3"/>
+                            <button type="submit" class="btn btn-primary">Search</button>
+                        </form>
+                    </div>
+                </div>
                 <div id="pre-results" class="d-flex flex-column"></div>
+                
             </section>
 
             <section class="col-8">
-                <h2>Results</h2>
+                <div class="container border">
+                    <div class="mt-3 d-flex justify-content-evenly align-items-center">
+                        <h2 id="city-name-title"></h2>
+                        <h3 id="date-title"></h3>
+                    </div>
+                    <div class="d-flex flex-column justify-content-center align-items-center">
+                        <img id="current-icon">
+                        <p id="temp"></p>
+                        <p id="wind"></p>
+                        <p id="humid"></p>
+                        <p id="uvindex"></p>
+                    </div>
+                </div>
+                <div class="container">
+                    <div id="five-day-container" class="mt-3 row d-flex justify-content-evenly">
+
+                    </div>
+                </div>
             </section>
 
         </div>
