--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                         </form>
                     </div>
                 </div>
-                <div id="pre-results" class="d-flex flex-column"></div>
+                <div id="pre-results" class="d-flex flex-column border-top">
+                    
+                </div>
                 
             </section>
 
