--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <div class="row">
 
-            <section class="col-4 d-flex flex-wrap">
+            <section class="col-4 d-flex flex-wrap justify-content-center">
                 <div class="container">
                     <div class="d-flex justify-content-center row">
                         <h2 class="m-3 mb-4 form-label">Search for a City:</h2>
@@ -27,10 +27,13 @@
                         </form>
                     </div>
                 </div>
+
+                <div class="container">
                 <div id="pre-results" class="d-flex flex-column border-top">
+                    <h3>Recent Searches</h3>
                     
                 </div>
-                
+                </div>
             </section>
 
             <section class="col-8">
